# const-sub-array

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: code.yml
src/: lib.rs
